# antenna-engine

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  serve.py  start.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.ai-pipeline/: architecture.json  dashboard.html  map.html  roadmap.json
.claude/: design-brief.json  em-pipeline-state.json  hotfix-log.json  run-em-pipeline.sh  ui-design-spec-full.json  ui-research-full.json  ui-spec.json
.github/workflows/: ci.yml  deploy.yml
n8n-workflows/: ae-ai-optimizer.json  ae-compute-server.json  ae-em-cad-import.json  ae-em-fdtd-python.json  ae-em-frontend.json  ae-em-hotfix.json  ae-em-mesh-gen.json  ae-em-mom-solver.json  ae-em-orchestrator.json  ae-em-tests.json  ae-kb-integrate.json  ae-regression-test.json  ae-sidebar-redesign.json  ae-ui-codegen.json  ae-ui-design-spec.json  ae-ui-figma.json  ae-ui-research.json
public/: waves.html
python/: README.md  pyproject.toml
python/antenna_ml/: __init__.py  api_schema.py  data_models.py  materials.py  optimizer.py  types.py
python/antenna_ml/data/: __init__.py  dataset.py  generator.py  normalization.py  schemas.py  simulation_data.py  yagi_generator.py
python/antenna_ml/fdtd/: __init__.py  cli.py  yee_grid.py
python/antenna_ml/models/: __init__.py  surrogate.py  surrogate_mlp.py  surrogate_s11.py
python/antenna_ml/training/: __init__.py  data_generator.py  trainer.py
python/api/: server.py
python/data/: __init__.py  dataset.py  generator.py  models.py  schemas.py  validate.py
python/data_models/: __init__.py
python/datasets/: __init__.py
python/models/: base.py  surrogate.py  types.py
python/scripts/: benchmark_inference.py  export_onnx.py  generate_dataset.py  generate_yagi_dataset.py  train_model.py
python/tests/: test_benchmark.py  test_data_models.py  test_dataset.py  test_generator.py  test_optimizer.py  test_surrogate.py  test_surrogate_model.py
python/tests/data/: test_dataset.py  test_generator.py  test_normalization.py  test_simulation_data.py  test_validate.py  test_yagi_generator.py  test_yagi_validation.py
python/tests/models/: test_surrogate.py  test_surrogate_mlp.py
python/tests/training/: test_trainer.py
python/training/: __init__.py  data_generator.py  train.py  train_surrogate.py  trainer.py
src/: App.tsx  declarations.d.ts  index.css  lib.rs  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bridge.rs  element.rs  lib.rs  main.rs  materials.rs  solver.rs  types.rs
src-tauri/src/core/: array.rs  basic_test.rs  batch.rs  benchmark_antennas.rs  bridge.rs  constants.rs  coverage.rs  element.rs  error.rs  export.rs  fdtd_bridge.rs  field.rs  frequency.rs  geometry.rs  green.rs  impedance.rs  import.rs  import_nastran.rs  import_nec.rs  import_stl.rs  inference.rs  linalg.rs  material.rs  mesh_refine.rs  mesher.rs  mod.rs  nf2ff.rs  port.rs  reference_data.rs  rwg.rs  solver.rs  touchstone.rs  types.rs
src-tauri/src/engine/: mod.rs  solver.rs  visualization.rs
src-tauri/src/gpu/: batch_runner.rs  benchmark.rs  compute.rs  cpu_solver.rs  device.rs  mod.rs  mom_gpu.rs  parallel.rs  sweep.rs
src-tauri/src/gpu/shaders/: field.wgsl  impedance_fill.wgsl
src-tauri/src/models/: simulation.rs
src/cad/: iges.rs  mod.rs  step.rs  stl.rs
src/components/: AntennaControls.test.tsx  AntennaControls.tsx  AntennaDesigner.tsx  AntennaForm.css  AntennaForm.test.tsx  AntennaForm.tsx  AntennaViewer.tsx  ExportPanel.tsx  PatternEditor.tsx  PatternList.tsx  PatternViewer.tsx  PatternVisualization.tsx  ProjectManager.tsx  ProjectSelector.tsx  index.ts  (+7 more)
tests/: test_data_generator.py  test_surrogate_model.py  test_training.py  test_types.py
web/: dashboard.html  index.html  map.html  serve.py
(+215 files in other folders)
