[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna_ml"
version = "0.1.0"
description = "AI/ML module for the AI Antenna Engine"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0,<3.0.0",
    "pydantic>=2.0,<3.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.11,<2.0"
]

[project.urls]
"Homepage" = "https://github.com/your-repo/ai-antenna-engine"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["antenna_ml*", "data_models*", "models*", "datasets*"]
