[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna_ml"
version = "0.1.0"
description = "AI/ML module for the Antenna Engine"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "scipy>=1.8.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["antenna_ml*", "data_models*", "models*", "datasets*", "training*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
