[package]
name = "antenna-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
num-complex = { version = "0.4", features = ["serde"] }
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
ort = "2.0.0-rc.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }
